--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-    "liveServer.settings.port": 5504
+    "liveServer.settings.port": 5506,
+    "livePreview.defaultPreviewPath": "/Basics/basics.html"
 }
